--- a/satt.html
+++ b/satt.html
@@ -50,7 +50,7 @@
 
                 <div class="container-2"  style="margin-left: 50px;">
 
-                    <a href="#" class="button">
+                    <a class="button">
                       <div class="button__line"></div>
                       <div class="button__line"></div>
                       <span id="add-product"
